# lidar_2d_sensor

./: .gitignore  CMakeLists.txt  README.md  config.ini  prompt.txt
LidarPy/: config.ini  lidar_viewer.py
include/: DataPoint.h  UST10LX.h
src/: UST10LX.cpp  main.cpp
